discussion/kv_engine/184517/184517_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus.

    ./mcstat --json 'threads details'
    {
      "details": {
        "89513": {
        "name": "memcached",
        "system": 110,
        "user": 1070
      },
    [... cut ...]

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-01-06 14:12:08.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2023-01-06 14:14:08.000000000
Message: 
Patch Set 8:

(1 comment)
Line:281, daemon/stats.cc -> "name" is actually reserved - it gets replaced with the statistic's name by ns_server (see https://review.couchbase.org/c/ns_server/+/132702), so I had to rename to `thread_name`.

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-06 14:26:38.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22373/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads([&json, &pid](auto tid,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:624:13: error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
            LOG_WARNING("{} - sigar::iterate_process_threads: {}",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:292:24: error: no type named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads(emit_thread_stats);
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22373/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22373/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51708/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(292): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51708/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43410/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43410/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1136/ : FAILURE

Compile error at [2023-01-06T14:16:09.835Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:292:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1136/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12094/ : FAILURE

Compile error at [2023-01-06T14:15:09.072Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:292:24:
error: no type named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12094/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24841/ : FAILURE

Compile error at [2023-01-06T14:18:23.176Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:610:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24841/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25701/ : FAILURE

Compile error at [2023-01-06T14:20:15.188Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:292:24:
error: no type named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25701/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24417/ : FAILURE

Compile error at [2023-01-06T14:16:27.221Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:292:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24417/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32837/ : FAILURE

Compile error at [2023-01-06T14:14:00.415Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:292:24:
error: no type named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32837/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12181/ : FAILURE

Compile error at [2023-01-06T14:22:22.641Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:292:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12181/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23947/ : FAILURE

Compile error at [2023-01-06T14:22:25.989Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:292:24:
error: no type named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23947/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22001/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-10 07:35:40.000000000
MISMATCHED INLINE COMMENT
Line:281, daemon/stats.cc -> Done
----------------------------------------------------------------------------------------------------------------------
